--- a/stylesheets/contact.css
+++ b/stylesheets/contact.css
@@ -1,29 +1,58 @@
-/* === CONTACT PAGE */
-#contact-form{
-  max-width:70%;
+/* ========================================= */
+/* Contanct Page */
+#contact-form label{
+  display: block;
+  font-weight: 500;
+  font-size: 0.8em;
+  letter-spacing: 0em;
+  padding: 0.2em 0;
 }
-#contact-form input, #contact-form textarea{
-  width:100%;
-  border:0;
-  border: 1px solid #000000;
-  padding:10px;
-}
-#contact-form input:focus, #contact-form textarea:focus{
-  border: 1px solid #D2DBDA;
-}
-#contact-form input[type="submit"]{
-  text-indent: 0;
-  width: 150px;
+#contact-form input[type="submit"], #contact-form input[type="submit"]:focus{
+  background-color: #000;
+  border: none;
+  color: #fff;
+  padding: 5px 18px;
+  font-size: 14px;
   font-weight: 400;
-  background-color: #000000;
-  padding: 5px;
-  margin-top: 10px;
-  color:#fff;
-  cursor: pointer;
+  cursor:pointer;
+  border-radius: 3px;
 }
 #contact-form input[type="submit"]:hover{
+  background-color: #939393;
+  color: #ffffff;
   opacity: 0.8;
 }
-#contact-form input[type="submit"]:focus{
-  background-color: #666;
+#contact-form input[type="submit"]:active{
+  opacity: 1;
+}
+#contact-form #subject-input, #contact-form #email-input{
+  width:49%;
+  margin-bottom: 1%;
+}
+#contact-form #email-input {
+  margin-right:2%;
+}
+#contact-form #subject-input input, #contact-form #email-input input{
+  width: 100%;
+  border: 1px solid #E8E8E8;
+  padding: 8px;
+  font-size: 0.9em;
+  background: none;
+}
+#contact-form textarea{
+  width:49%;
+  padding:1%;
+  font-size: 0.9em;
+  border: 1px solid #E8E8E8;
+  margin-bottom: 1%;
+  display:block;
+  background: none;
+}
+\
+/* 600px and below */
+@media screen and (max-width: 600px) {
+  #contact-form #subject-input, #contact-form #email-input{
+    width:100%;
+    margin-right:0;
+  }
 }
