--- a/templates/contact.liquid
+++ b/templates/contact.liquid
@@ -1,7 +1,12 @@
-<div class="static-page-wrapper">
-	<h1>{{ page.title }}</h1>
-	<div id="content">
-	  <form id="contact-form">
+<!--
+Template: Minimost
+File: page.liquid
+-->
+
+<section id="content" class="static-page-wrapper">
+  <h2>{{ page.title }}</h2>
+  <div id="inner-page-content" class="page">
+    <form id="contact-form">
       <div id="email-input">
         <label for="email">Email</label>
         <input id="email" type="text" name="email" />
@@ -9,10 +14,9 @@
       <div id="subject-input">
         <label for="subject">Asunto</label>
         <input id="subject" type="text" name="subject" />
-      </div>
-      <label for="message">Mensaje</label>
-      <textarea id="message" name="message" rows="5" cols="75"></textarea>
-      <input type="submit" value="Enviar" />
-    </form>
-	</div>
-</div>
+     </div>
+     <label for="message">Mensaje</label>
+     <textarea id="message" name="message" rows="5" cols="75"></textarea>
+     <input type="submit" value="Enviar" /></form>
+  </div>
+</section>
