--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -209,14 +209,12 @@
         <div id="sub-header">
           <nav id="nav-container">
             <ul id="navigation-bar">
-              <li><a href="/products">Productos</a></li>
               {% for page in pages %}
-              <li {% if page.url contains current_path and current_path != "/" %}class="current-page"{% endif %}><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></li>
+              <li {% if (page.url contains current_path and current_path != "/") or (current_path == "/" and page.is_homepage) %}class="current-page"{% endif %}><a href="{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></li>
               {% endfor %}
+              <li {% if (current_path == "/products") %}class="current-page"{% endif %}><a href="/products">Productos</a></li>
             </ul>
           </nav>
-
-
         </div>
         </header>
 
