Fixed images with inside container

--- a/stylesheets/shop.css
+++ b/stylesheets/shop.css
@@ -671,6 +671,9 @@ body.template-page #content p {
   margin-bottom: 1em;
   font-size: 14px;
 }
+body.template-page #content .page img{
+  max-width: 100%;
+}
 
 /* ========================================= */
 /* Product content */
