--- a/stylesheets/shop.css
+++ b/stylesheets/shop.css
@@ -755,6 +755,9 @@ button.buy-button:active {
 #cart-form .payment_images span {
   color: inherit;
 }
+#cart-form .payment_images.first_tier img{
+  display: block;
+}
 #cart-form .social-container {
   overflow: auto;
   margin-bottom: 20px;
