Change footer tagline

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -255,7 +255,7 @@
       </div>
       <div id="ombushop-footer">
         <div class="footer-container">
-          <a href="#" target="_blank" title="OmbuShop. Tu plataforma de tienda online" ><strong>Ombushop.</strong> Tu plataforma de tienda online.</a>
+          <a href="#" target="_blank" title="OmbuShop. Tu plataforma de venta online" ><strong>Ombushop.</strong> Tu plataforma de venta online.</a>
         </div>
       </div>
     </footer>
