--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -207,10 +207,14 @@
           <div id="contact-info">
             <ul>
               {% for social_network in social_networks %}
+                {% if social_network[0] != "phone" %}
+                  <li class="{{ social_network[0] }}"><a href="{{ social_network[1] }}" target="_blank"><i class="fa fa-{{ social_network[0] }}"></i></a></li>
+                {% endif %}
+              {% endfor %}
+
+              {% for social_network in social_networks %}
                 {% if social_network[0] == "phone" %}
                   <li class="phone"><i class="fa fa-phone"></i> {{ social_network[1] }}</li>
-                {% else %}
-                  <li class="{{ social_network[0] }}"><a href="{{ social_network[1] }}" target="_blank"><i class="fa fa-{{ social_network[0] }}"></i></a></li>
                 {% endif %}
               {% endfor %}
             </ul>
@@ -265,11 +269,17 @@
         <div id="contact-info">
           <h1>Contacto</h1>
           <ul>
-            {% for social_network in social_networks %}
-              {% if social_network[0] == "phone" %}
-                <li class="phone"><i class="fa fa-phone"></i> {{ social_network[1] }}</li>
-              {% endif %}
-            {% endfor %}
+              {% for social_network in social_networks %}
+                {% if social_network[0] != "phone" %}
+                  <li class="{{ social_network[0] }}"><a href="{{ social_network[1] }}" target="_blank"><i class="fa fa-{{ social_network[0] }}"></i></a></li>
+                {% endif %}
+              {% endfor %}
+
+              {% for social_network in social_networks %}
+                {% if social_network[0] == "phone" %}
+                  <li class="phone"><i class="fa fa-phone"></i> {{ social_network[1] }}</li>
+                {% endif %}
+              {% endfor %}
           </ul>
         </div>
       </div>
