Corrected OmbuShop name

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -262,7 +262,7 @@
       </div>
       <div id="ombushop-footer">
         <div class="footer-container">
-          <a href="http://www.ombushop.com/tu-tienda-online?utm_source=shop&utm_medium={{shop.name}}" target="_blank" title="OmbuShop. Tu plataforma de venta online" ><strong>Ombushop.</strong> Tu plataforma de venta online.</a>
+          <a href="http://www.ombushop.com/tu-tienda-online?utm_source=shop&utm_medium={{shop.name}}" target="_blank" title="OmbuShop. Tu plataforma de venta online" ><strong>OmbuShop.</strong> Tu plataforma de venta online.</a>
         </div>
       </div>
     </footer>
