Added demo link style

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -77,6 +77,7 @@ img {
   height: auto;
   margin: 20px auto;
   display: block;
+  border: 1px solid #eee;
 }
 a {
   color: #FF8C2F;
@@ -138,7 +139,7 @@ header {
 #forkme_banner:hover {
   padding-top: 20px;
 }
-a.download_link {
+a.download_link, .demo {
   font-weight: 400;
   display: inline-block;
   margin: 5px;
@@ -159,7 +160,7 @@ a.download_link:active {
               rgba(0,0,0,.3) 0 3px 3px inset;
   background: #d3660f;
 }
-
+.demo{margin: 10px 0;}
 /* ================================== */
 /* MAIN CONTENT */
 
