--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -265,5 +265,6 @@
     <!-- pinterest code -->
     <script type="text/javascript" src="//assets.pinterest.com/js/pinit.js"></script>
     <!-- end pinterest code -->
+    {{ content_for_footer }}
   </body>
 </html>
