Added legal message

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -256,6 +256,7 @@
           </ul>
         </div>
       </div>
+      <!-- No remover. Debe haber un link que  dirija a www.ombushop.com . Ver Términos y Condiciones -->
       <div id="ombushop-footer">
         <div class="footer-container">
           <a href="http://www.ombushop.com/tu-tienda-online?utm_source=shop&utm_medium={{shop.name}}" target="_blank" title="OmbuShop. Tu plataforma de venta online" ><strong>OmbuShop.</strong> Tu plataforma de venta online.</a>
