--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -33,7 +33,7 @@
 		<!-- Ombu Shop - Theme: Minimost -->
 
     <!-- Google typography and Fontawesome -->
-    <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
     <link href='/themes/minimost/stylesheets/reset.css' rel='stylesheet' type='text/css' />
